Fixing the wrapping of ckeditor combo buttons

--- a/src/sass/form/_wysiwyg.scss
+++ b/src/sass/form/_wysiwyg.scss
@@ -3,3 +3,10 @@
 .cke_bottom, .cke_top, .cke_chrome {
 	background: $form-container-bkgd;
 }
+
+// There was a little bit too much pad bottom that resulted
+// in a bad wrap
+// http://yo.bkwld.com/image/2s2p1g0w3a2X
+.wysiwyg-wrap .cke_combo_button {
+	margin-bottom: 3px;
+}
